# flow

./: .gitignore  .mcp.json  AI_HANDOFF_NOTES.md  AUTOMATED_TESTS_COMPLETE.md  CALENDAR_INTEGRATION_COMPLETE.md  CALENDAR_INTEGRATION_HANDOFF.md  CLAUDE.md  DEPLOY-app-store-resubmission.md  DESKTOP_SETUP.md  MIGRATION_GUIDE.md  MIGRATION_NEEDED.md  PHASE_3_COMPLETE.md  PHASE_3_TEST_RESULTS.md  PHASE_4_COMPLETE.md  PHASE_4_QUICK_REFERENCE.md  PHASE_5_COMPLETE.md  PHASE_5_HANDOFF.md  PHASE_5_QUICK_START.md  PHASE_6_COMPLETE.md  PLAN-app-store-auth-fixes.md  START_HERE.md  TEST_PHASE_3_README.md  VERCEL_ENV_SETUP.md  build-status-updates.md  deploy.sh  eslint.config.js  package.json  pnpm-lock.yaml  test-phase-3.sh  test-phase-3.sql  test-phase1.js  test-phase2.js  test-phase3.js  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.claude/: settings.json
.claude/commands/: merge-pr.md  pre-commit.md
.github/workflows/: test.yml
.turbo/daemon/: 339a1de8279c7457-turbo.log.2025-09-23
apps/desktop/: .gitignore  generate-icon.js  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: App.tsx  app.config.js  capacitor.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/web/: .env.local.example  .gitignore  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  (+3 more)
docs/: PHASE_6_TESTING_GUIDE.md  SUPABASE_ARCHITECTURE_REVIEW.md  calendar-cron-setup.md  calendar-integration-build-plan.md  phase-3-backend-complete.md  phase-3-testing-guide.md
docs/infrastructure/: TAURI_AUTH_SETUP_CHECKLIST.md  ios-deployment-guide.md  mobile-readiness-checklist.md  multi-environment-setup-memory.md  tauri-desktop-authentication-issues.md  tauri-desktop-authentication-setup.md
docs/project-wide-context/: ai-quickstart.md  golden-path.md  high-level-changes-log.md  multi-platform-auth-setup.md  project-overview.md  technical-guide.md  testing-strategy.md  updated-mobile-solution.md
docs/sql/: create.md
supabase/: config.toml
supabase/migrations/: 20250131000000_allow_viewing_collaborator_profiles.sql  20250921083200_initial_schema.sql  20250921170000_phase1_auth_profiles.sql  20250922000000_phase3_and_phase4_tables.sql  (+44 more)
(+156 files in other folders)
