[package]
name = "perfect-task-app"
version = "0.1.0"
description = "Perfect Task App - Ultimate task and project management"
authors = ["Perfect Task Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "api-all", "system-tray", "global-shortcut", "notification-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]