[package]
name = "perfect-task-app"
version = "0.1.0"
description = "Perfect Task App - Ultimate task and project management"
authors = ["Perfect Task Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "fs-copy-file", "fs-remove-dir", "fs-read-file", "dialog-save", "global-shortcut-all", "fs-create-dir", "fs-write-file", "dialog-open", "fs-exists", "system-tray", "global-shortcut", "notification-all", "shell-open"] }
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "v1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
